// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`./ToggleButtonGroup.stories Default 1`] = `
<div
  aria-label="text alignment"
  class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="0"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      Tokens
    </div>
  </button>
  <button
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="1"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      NFTs
    </div>
  </button>
</div>
`;

exports[`./ToggleButtonGroup.stories PreselectedValue 1`] = `
<div
  aria-label="text alignment"
  class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="0"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      Assets
    </div>
  </button>
  <button
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="1"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      Positions
    </div>
  </button>
</div>
`;

exports[`./ToggleButtonGroup.stories ThreeOptions 1`] = `
<div
  aria-label="text alignment"
  class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="0"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      All
    </div>
  </button>
  <button
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-middleButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="1"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      Pending
    </div>
  </button>
  <button
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="2"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      Completed
    </div>
  </button>
</div>
`;

exports[`./ToggleButtonGroup.stories WithIcons 1`] = `
<div
  aria-label="text alignment"
  class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="0"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
        data-testid="ListIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 13h2v-2H3zm0 4h2v-2H3zm0-8h2V7H3zm4 4h14v-2H7zm0 4h14v-2H7zM7 7v2h14V7z"
        />
      </svg>
    </div>
  </button>
  <button
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="1"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1dhtbeh-MuiSvgIcon-root"
        data-testid="GridViewIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M3 3v8h8V3zm6 6H5V5h4zm-6 4v8h8v-8zm6 6H5v-4h4zm4-16v8h8V3zm6 6h-4V5h4zm-6 4v8h8v-8zm6 6h-4v-4h4z"
          fill-rule="evenodd"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`./ToggleButtonGroup.stories WithIconsAndText 1`] = `
<div
  aria-label="text alignment"
  class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-cinseo-MuiToggleButtonGroup-root"
  role="group"
>
  <button
    aria-pressed="true"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-firstButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="0"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1hy3mdy-MuiTypography-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tqxw8e-MuiSvgIcon-root"
          data-testid="ListIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 13h2v-2H3zm0 4h2v-2H3zm0-8h2V7H3zm4 4h14v-2H7zm0 4h14v-2H7zM7 7v2h14V7z"
          />
        </svg>
         List
      </p>
    </div>
  </button>
  <button
    aria-pressed="false"
    class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-standard MuiToggleButtonGroup-grouped MuiToggleButtonGroup-groupedHorizontal MuiToggleButtonGroup-lastButton css-u2ogzi-MuiButtonBase-root-MuiToggleButton-root"
    tabindex="0"
    type="button"
    value="1"
  >
    <div
      class="MuiBox-root css-mro3c9"
    >
      <p
        class="MuiTypography-root MuiTypography-body2 css-1hy3mdy-MuiTypography-root"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-tqxw8e-MuiSvgIcon-root"
          data-testid="GridViewIcon"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M3 3v8h8V3zm6 6H5V5h4zm-6 4v8h8v-8zm6 6H5v-4h4zm4-16v8h8V3zm6 6h-4V5h4zm-6 4v8h8v-8zm6 6h-4v-4h4z"
            fill-rule="evenodd"
          />
        </svg>
         Grid
      </p>
    </div>
  </button>
</div>
`;
